Sepration of pages and pages components added

--- a/src/App.css
+++ b/src/App.css
@@ -33,3 +33,9 @@ body{
   ::-webkit-scrollbar-thumb:hover {
     background: #002e94;
   }
+
+  .more1{
+    font-size: 20px;
+    margin-top: 20px;
+    padding: 10px 25  px 10px 25px;
+  }
